--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   <script defer src="assets/js/config.js"></script>
 
   <style>
-    /* ---------- Заголовок live ---------- */
     .live-header{
       display:flex;
       flex-direction:column;
@@ -58,32 +57,19 @@
       font-size:12px;
     }
 
-    /* ---------- Layout ---------- */
     .live-layout{
       display:grid;
       grid-template-columns:1fr;
       gap:18px;
     }
-    @media (min-width:980px){
-      .live-layout{
-        grid-template-columns:2fr 1.1fr;
-      }
-    }
 
-    .live-left > .card + .card{
-      margin-top:16px;
-    }
-
-    /* ---------- Зони ---------- */
     .live-zones-grid{
       display:grid;
       grid-template-columns:repeat(3,1fr);
       gap:12px;
     }
-    @media (max-width:980px){
-      .live-zones-grid{
-        grid-template-columns:1fr;
-      }
+    @media (max-width: 980px){
+      .live-zones-grid{grid-template-columns:1fr;}
     }
 
     .live-zone-title{
@@ -92,12 +78,12 @@
       justify-content:space-between;
       margin-bottom:6px;
     }
-    .live-zone-title .badge{
+    .live-zone-title span.badge{
       font-size:11px;
       padding:3px 8px;
     }
 
-    /* ---------- Таблиці компактні ---------- */
+    /* компактні таблиці */
     .table-sm{
       font-size:11.5px;
       line-height:1.2;
@@ -108,12 +94,8 @@
       white-space:nowrap;
     }
     .table-sm td.team-col{
-      max-width:160px;
+      max-width:180px;
       white-space:normal;
-    }
-
-    .table-wrap{
-      overflow-x:auto;
     }
 
     .live-note{
@@ -122,7 +104,7 @@
       margin-top:6px;
     }
 
-    /* ---------- BigFish Total ---------- */
+    /* BigFish Total */
     .bf-toggle{
       display:flex;
       gap:10px;
@@ -135,13 +117,13 @@
       border-radius:12px;
       font-size:13px;
     }
-
     .bf-wrap{
-      display:block; /* Поки що завжди видно; потім повішаємо toggle класом is-open */
+      display:none;
+      margin-top:12px;
       margin-bottom:18px;
     }
-    .bf-wrap.is-hidden{
-      display:none;
+    .bf-wrap.is-open{
+      display:block;
     }
 
     .pill{
@@ -160,7 +142,7 @@
       background:rgba(250,204,21,0.08);
     }
 
-    /* ---------- Зважування ---------- */
+    /* Зважування W1–W4 */
     .weigh-toggle{
       display:flex;
       gap:8px;
@@ -168,20 +150,9 @@
       margin-bottom:10px;
     }
     .weigh-toggle .btn{
-      padding:6px 12px;
+      padding:6px 10px;
       border-radius:999px;
       font-size:13px;
-    }
-
-    .btn--chip{
-      background:transparent;
-      border:1px solid rgba(148,163,184,.4);
-      color:#e5e7eb;
-    }
-    .btn--chip-active{
-      background:linear-gradient(135deg,#f6c34c,#b45309);
-      border-color:transparent;
-      color:#0f172a;
     }
   </style>
 </head>
@@ -199,7 +170,7 @@
       <a href="/index.html" class="nav__link">Головна</a>
       <a href="/rules.html" class="nav__link">Регламент</a>
       <a href="/register.html" class="nav__link">Реєстрація</a>
-      <a href="/live.html" class="nav__link nav__link--active">Live</a>
+      <a href="/live.html" class="nav__link">Live</a>
       <a href="/rating.html" class="nav__link">Рейтинг</a>
       <a href="/lakes.html" class="nav__link">Водойми</a>
       <a href="/sponsors.html" class="nav__link">Спонсори</a>
@@ -207,16 +178,14 @@
       <a href="/cabinet.html" class="nav__link">Мій кабінет</a>
     </nav>
 
-    <button class="burger" id="burger">
-      <span></span><span></span><span></span>
-    </button>
+    <button class="burger" id="burger"><span></span><span></span><span></span></button>
   </div>
 </header>
 
 <main class="main">
   <section class="container section">
 
-    <!-- ========= HEADER ========= -->
+    <!-- HEADER -->
     <div class="live-header">
       <div class="live-kicker">
         <span class="live-dot"></span>
@@ -224,54 +193,37 @@
       </div>
 
       <h1 class="title-gradient" style="margin:4px 0 4px;font-size:clamp(26px,4.5vw,34px);">
-        Результати активних змагань
+        Результати активного етапу
       </h1>
 
       <div class="live-stage-pill">
-        <span>Активні: <strong id="liveStageName">STOLAR CARP · Сталкер Відкриття — Етап 1</strong></span>
+        <span>Поточний етап: <strong id="liveStageName">—</strong></span>
       </div>
 
       <div class="bf-toggle">
         <button class="btn btn--accent" id="toggleBigFishBtn" type="button">BigFish Total</button>
-        <span class="pill" id="liveUpdatedAt" title="Останнє оновлення">Оновлено: 24.12, 01:11</span>
+        <span class="pill" id="liveUpdatedAt" title="Останнє оновлення">Оновлено: —</span>
       </div>
-
-      <p class="lead" style="max-width:720px;margin:6px 0 0;">
-        W = <b>к-сть / вага</b>. Таблиці оновлюються автоматично з Firebase.
-      </p>
     </div>
 
-    <!-- ========= BIGFISH TOTAL ПІД КНОПКОЮ ========= -->
+    <!-- BIGFISH TOTAL ПІД КНОПКОЮ -->
     <div class="card bf-wrap" id="bigFishWrap">
       <div style="display:flex;align-items:center;justify-content:space-between;gap:10px;flex-wrap:wrap;">
         <h2 style="margin:0;">BigFish — Total</h2>
-        <span class="pill" id="bfCount">Учасників: 2</span>
+        <span class="pill" id="bfCount">Учасників: —</span>
       </div>
 
-      <div class="table-wrap" style="margin-top:10px;">
+      <div class="table-wrap" style="overflow-x:auto;margin-top:10px;">
         <table class="table table-sm" id="bigFishTable">
           <thead>
-          <tr>
-            <th>Команда</th>
-            <th>BIG 1 доба</th>
-            <th>BIG 2 доба</th>
-            <th>MAX BIG</th>
-          </tr>
+            <tr>
+              <th>Команда</th>
+              <th>BIG 1 доба</th>
+              <th>BIG 2 доба</th>
+              <th>MAX BIG</th>
+            </tr>
           </thead>
-          <tbody>
-          <tr class="bigfish-row--max">
-            <td class="team-col">DK Два Кума</td>
-            <td>14,325</td>
-            <td>12,780</td>
-            <td>14,325</td>
-          </tr>
-          <tr>
-            <td class="team-col">Ти</td>
-            <td>—</td>
-            <td>—</td>
-            <td>—</td>
-          </tr>
-          </tbody>
+          <tbody></tbody>
         </table>
       </div>
 
@@ -280,112 +232,24 @@
       </p>
     </div>
 
-    <!-- ========= СТАТУС / ПОМИЛКИ ========= -->
+    <!-- СТАН / ПОМИЛКИ -->
     <div id="liveError" class="form-msg err" style="display:none;"></div>
-    <div id="liveLoading" class="form__hint" style="margin-top:12px;display:none;">
+
+    <div id="liveLoading" class="form__hint" style="margin-top:12px;">
       Завантаження результатів...
     </div>
 
-    <!-- ========= ОСНОВНИЙ КОНТЕНТ ========= -->
-    <div id="liveContent" class="live-layout">
+    <!-- ОСНОВНИЙ КОНТЕНТ -->
+    <div id="liveContent" class="live-layout" style="display:none;">
 
-      <!-- ===== LEFT: ЗОНИ + ЗВАЖУВАННЯ ===== -->
+      <!-- LEFT: Зони + Зважування -->
       <div class="live-left">
 
-        <!-- ЗОНИ A / B / C -->
-        <div class="card">
+        <!-- ЗОНИ A/B/C -->
+        <div class="card" style="margin-bottom:16px;">
           <h2 style="margin-top:0;margin-bottom:10px;">Зони A / B / C</h2>
 
-          <div class="live-zones-grid" id="zonesContainer">
-            <!-- Зона A -->
-            <div class="card">
-              <div class="live-zone-title">
-                <h3 style="margin:0;">Зона A</h3>
-                <span class="badge">команд: 1</span>
-              </div>
-              <div class="table-wrap">
-                <table class="table table-sm">
-                  <thead>
-                  <tr>
-                    <th>Зона</th>
-                    <th>Команда</th>
-                    <th>W1</th>
-                    <th>W2</th>
-                    <th>W3</th>
-                    <th>W4</th>
-                    <th>Разом</th>
-                    <th>BIG</th>
-                    <th>Вага</th>
-                    <th>Місце</th>
-                  </tr>
-                  </thead>
-                  <tbody>
-                  <tr>
-                    <td>A1</td>
-                    <td class="team-col">DK Два Кума</td>
-                    <td>5 / 26,780</td>
-                    <td>7 / 37,700</td>
-                    <td>—</td>
-                    <td>—</td>
-                    <td>12 / 64,480</td>
-                    <td>10,440</td>
-                    <td>64,480</td>
-                    <td>1</td>
-                  </tr>
-                  </tbody>
-                </table>
-              </div>
-            </div>
-
-            <!-- Зона B -->
-            <div class="card">
-              <div class="live-zone-title">
-                <h3 style="margin:0;">Зона B</h3>
-                <span class="badge">команд: 1</span>
-              </div>
-              <div class="table-wrap">
-                <table class="table table-sm">
-                  <thead>
-                  <tr>
-                    <th>Зона</th>
-                    <th>Команда</th>
-                    <th>W1</th>
-                    <th>W2</th>
-                    <th>W3</th>
-                    <th>W4</th>
-                    <th>Разом</th>
-                    <th>BIG</th>
-                    <th>Вага</th>
-                    <th>Місце</th>
-                  </tr>
-                  </thead>
-                  <tbody>
-                  <tr>
-                    <td>B5</td>
-                    <td class="team-col">Ти</td>
-                    <td>3 / 14,320</td>
-                    <td>4 / 18,250</td>
-                    <td>—</td>
-                    <td>—</td>
-                    <td>7 / 32,570</td>
-                    <td>8,975</td>
-                    <td>32,570</td>
-                    <td>1</td>
-                  </tr>
-                  </tbody>
-                </table>
-              </div>
-            </div>
-
-            <!-- Зона C -->
-            <div class="card">
-              <div class="live-zone-title">
-                <h3 style="margin:0;">Зона C</h3>
-                <span class="badge">немає даних</span>
-              </div>
-              <p class="live-note">Результати для цієї зони ще не заповнені.</p>
-            </div>
-          </div>
+          <div class="live-zones-grid" id="zonesContainer"></div>
 
           <p class="live-note">
             Сортування: вага → BIG. Місце — в межах зони.
@@ -397,69 +261,27 @@
           <h2 style="margin-top:0;margin-bottom:10px;">Зважування по етапу</h2>
 
           <div class="weigh-toggle">
-            <button type="button" class="btn btn--chip btn--chip-active" id="wBtn1">W1</button>
-            <button type="button" class="btn btn--chip" id="wBtn2">W2</button>
-            <button type="button" class="btn btn--chip" id="wBtn3">W3</button>
-            <button type="button" class="btn btn--chip" id="wBtn4">W4</button>
+            <button type="button" class="btn btn--accent" id="wBtn1">W1</button>
+            <button type="button" class="btn btn--ghost"  id="wBtn2">W2</button>
+            <button type="button" class="btn btn--ghost"  id="wBtn3">W3</button>
+            <button type="button" class="btn btn--ghost"  id="wBtn4">W4</button>
           </div>
 
-          <div class="table-wrap">
+          <div class="table-wrap" style="overflow-x:auto;">
             <table class="table table-sm" id="weighTable">
-              <thead>
-              <tr>
-                <th>Зона</th>
-                <th>Команда</th>
-                <th>Р1</th>
-                <th>Р2</th>
-                <th>Р3</th>
-                <th>Р4</th>
-                <th>Р5</th>
-                <th>Р6</th>
-                <th>Р7</th>
-                <th>Р8</th>
-              </tr>
-              </thead>
-              <tbody>
-              <tr>
-                <td>A1</td>
-                <td class="team-col">DK Два Кума</td>
-                <td>5,010</td>
-                <td>5,450</td>
-                <td>6,200</td>
-                <td>4,220</td>
-                <td>3,140</td>
-                <td>6,130</td>
-                <td>4,110</td>
-                <td>6,610</td>
-              </tr>
-              <tr>
-                <td>B5</td>
-                <td class="team-col">Ти</td>
-                <td>3,430</td>
-                <td>5,750</td>
-                <td>—</td>
-                <td>—</td>
-                <td>—</td>
-                <td>—</td>
-                <td>—</td>
-                <td>—</td>
-              </tr>
-              </tbody>
+              <!-- JS повністю малює thead + tbody -->
             </table>
           </div>
 
           <p class="live-note" id="weighInfo">
-            W1–W4 — зважування. У таблиці показані окремі риби (кожна вага у своїй клітинці) для вибраного зважування.
+            W1–W4 — зважування. Показуються всі риби команди у вибраному зважуванні.
           </p>
         </div>
 
       </div>
 
-      <!-- ===== RIGHT (можна буде використати під графіки / нотатки) ===== -->
-      <div class="live-right">
-        <!-- Поки пусто, щоб не заважати мобільній версії -->
-      </div>
-
+      <!-- RIGHT: запас під майбутні модулі -->
+      <div class="live-right"></div>
     </div>
 
   </section>
@@ -475,15 +297,17 @@
   </div>
 </footer>
 
-<!-- Firebase (поки логіку не чіпаємо, можна лишити або закоментити) -->
+<!-- Firebase compat -->
 <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-auth-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore-compat.js"></script>
 <script src="assets/js/firebase-init.js"></script>
 
-<!-- Тут ПІЗНІШЕ будемо під’єднувати live_firebase.js і bigfish_total_live.js -->
-<!-- <script src="assets/js/live_firebase.js"></script>
-<script src="assets/js/bigfish_total_live.js"></script> -->
+<!-- Live читання (зони + зважування) -->
+<script src="assets/js/live_firebase.js"></script>
+
+<!-- BigFish Total логіка -->
+<script src="assets/js/bigfish_total_live.js"></script>
 
 </body>
 </html>
