--- a/cabinet.html
+++ b/cabinet.html
@@ -13,283 +13,52 @@
   <script defer src="assets/js/config.js"></script>
 
   <style>
-    body.cabinet-page{
-      background:#020617;
-      color:#e5e7eb;
-    }
-
-    .cabinet-hero{
-      padding:26px 0 10px;
-    }
-
-    .cabinet-kicker{
-      font-size:.78rem;
-      letter-spacing:.18em;
-      text-transform:uppercase;
-      color:#9ca3af;
-      display:flex;
-      align-items:center;
-      gap:8px;
-      margin-bottom:6px;
-    }
-
-    .cabinet-kicker-dot{
-      width:10px;
-      height:10px;
-      border-radius:999px;
-      background:linear-gradient(135deg,#facc15,#f97316);
-      box-shadow:0 0 10px rgba(250,204,21,.7);
-    }
-
-    .cabinet-title{
-      margin:0 0 6px;
-      font-size:clamp(22px,3.4vw,30px);
-      font-weight:800;
-      letter-spacing:.06em;
-      text-transform:uppercase;
-    }
-
-    .cabinet-title span{
-      background:linear-gradient(90deg,#facc15 0%,#f97316 40%,#dc2626 100%);
-      -webkit-background-clip:text;
-      background-clip:text;
-      color:transparent;
-    }
-
-    .cabinet-subtitle{
-      margin:0;
-      font-size:.95rem;
-      color:#9ca3af;
-      max-width:640px;
-    }
-
-    .cabinet-layout{
-      margin-top:18px;
-      display:grid;
-      grid-template-columns:minmax(0,1fr);
-      gap:18px;
-    }
-
-    .card{
-      background:#020617;
-      border-radius:18px;
-      border:1px solid #1f2937;
-      box-shadow:0 20px 40px rgba(0,0,0,.75);
-      padding:16px 14px 16px;
-    }
-
-    .card--soft{
-      background:radial-gradient(circle at top,#0b1220 0,#020617 65%);
-    }
-
-    .card-title{
-      margin:0 0 8px;
-      font-size:.9rem;
-      letter-spacing:.14em;
-      text-transform:uppercase;
-      color:#9ca3af;
-    }
-
-    .card-subtitle{
-      margin:0 0 10px;
-      font-size:.86rem;
-      color:#9ca3af;
-    }
-
-    .cabinet-small-muted{
-      font-size:.8rem;
-      color:#6b7280;
-      margin-top:4px;
-    }
-
-    /* --------- Профіль команди --------- */
-    .team-header{
-      display:flex;
-      align-items:flex-start;
-      gap:14px;
-      margin-bottom:12px;
-    }
-
-    .team-avatar-wrap{
-      width:82px;
-      height:82px;
-      border-radius:18px;
-      overflow:hidden;
-      background:radial-gradient(circle at top,#facc15,#f97316,#111827);
-      flex-shrink:0;
-      position:relative;
-      display:flex;
-      align-items:center;
-      justify-content:center;
-    }
-
-    .team-avatar{
-      width:100%;
-      height:100%;
-      object-fit:cover;
-      display:none;
-    }
-
-    .team-avatar-placeholder{
-      font-weight:800;
-      font-size:1.4rem;
-      color:#111827;
-    }
-
-    .team-main{
-      flex:1;
-    }
-
-    .team-name{
-      font-size:1.1rem;
-      font-weight:700;
-      text-transform:uppercase;
-      letter-spacing:.06em;
-      margin-bottom:4px;
-    }
-
-    .team-tagline{
-      font-size:.85rem;
-      color:#9ca3af;
-      margin-bottom:8px;
-    }
-
-    .team-meta{
-      display:flex;
-      flex-wrap:wrap;
-      gap:6px;
-      font-size:.8rem;
-    }
-
-    .meta-pill{
-      border-radius:999px;
-      padding:4px 8px;
-      background:#020617;
-      border:1px solid #374151;
-      color:#e5e7eb;
-    }
-
-    .meta-pill strong{
-      color:#facc15;
-      font-weight:600;
-    }
-
-    .avatar-upload{
-      margin-top:8px;
-      display:flex;
-      align-items:center;
-      gap:8px;
-      font-size:.8rem;
-    }
-
-    .avatar-upload input[type="file"]{
-      font-size:.75rem;
-      max-width:160px;
-    }
-
-    .avatar-small-btn{
-      border-radius:999px;
-      border:none;
-      padding:5px 10px;
-      font-size:.78rem;
-      font-weight:600;
-      background:#0f172a;
-      color:#e5e7eb;
-      cursor:pointer;
-    }
-
-    .avatar-small-btn:hover{
-      background:#111827;
-    }
-
-    /* --------- Учасники --------- */
-    .members-list{
-      margin-top:10px;
-      border-top:1px solid #1f2937;
-      padding-top:10px;
-    }
-
-    .members-title{
-      font-size:.86rem;
-      text-transform:uppercase;
-      letter-spacing:.16rem;
-      color:#9ca3af;
-      margin-bottom:6px;
-    }
-
-    .member-row{
-      display:flex;
-      align-items:center;
-      gap:8px;
-      padding:5px 0;
-      font-size:.88rem;
-    }
-
-    .member-meta{
-      display:flex;
-      flex-direction:column;
-    }
-
-    .member-name{
-      font-weight:500;
-    }
-
-    .member-role{
-      font-size:.78rem;
-      color:#9ca3af;
-    }
-
-    /* --------- Досягнення --------- */
-    .stats-grid{
-      display:grid;
-      grid-template-columns:repeat(3,minmax(0,1fr));
-      gap:10px;
-      margin:8px 0 10px;
-      font-size:.85rem;
-    }
-
-    .stat-card{
-      border-radius:12px;
-      padding:9px 10px;
-      background:radial-gradient(circle at top,#0b1120 0,#020617 70%);
-      border:1px solid #1f2937;
-    }
-
-    .stat-label{
-      color:#9ca3af;
-      margin-bottom:4px;
-      font-size:.78rem;
-    }
-
-    .stat-value{
-      font-size:1.05rem;
-      font-weight:700;
-    }
-
-    .stat-unit{
-      font-size:.8rem;
-      color:#9ca3af;
-      margin-left:3px;
-    }
-
-    /* Повідомлення */
-    #cabinetMsg{
-      margin-top:8px;
-      font-size:.82rem;
-    }
+    body.cabinet-page{background:#020617;color:#e5e7eb;}
+    .cabinet-hero{padding:26px 0 10px;}
+    .cabinet-kicker{font-size:.78rem;letter-spacing:.18em;text-transform:uppercase;color:#9ca3af;display:flex;align-items:center;gap:8px;margin-bottom:6px;}
+    .cabinet-kicker-dot{width:10px;height:10px;border-radius:999px;background:linear-gradient(135deg,#facc15,#f97316);box-shadow:0 0 10px rgba(250,204,21,.7);}
+    .cabinet-title{margin:0 0 6px;font-size:clamp(22px,3.4vw,30px);font-weight:800;letter-spacing:.06em;text-transform:uppercase;}
+    .cabinet-title span{background:linear-gradient(90deg,#facc15 0%,#f97316 40%,#dc2626 100%);-webkit-background-clip:text;background-clip:text;color:transparent;}
+    .cabinet-subtitle{margin:0;font-size:.95rem;color:#9ca3af;max-width:640px;}
+    .cabinet-layout{margin-top:18px;display:grid;grid-template-columns:minmax(0,1fr);gap:18px;}
+    .card{background:#020617;border-radius:18px;border:1px solid #1f2937;box-shadow:0 20px 40px rgba(0,0,0,.75);padding:16px 14px;}
+    .card--soft{background:radial-gradient(circle at top,#0b1220 0,#020617 65%);}
+    .card-title{margin:0 0 8px;font-size:.9rem;letter-spacing:.14em;text-transform:uppercase;color:#9ca3af;}
+    .card-subtitle{margin:0 0 10px;font-size:.86rem;color:#9ca3af;}
+    .cabinet-small-muted{font-size:.8rem;color:#6b7280;margin-top:4px;}
+    .team-header{display:flex;align-items:flex-start;gap:14px;margin-bottom:12px;}
+    .team-avatar-wrap{width:82px;height:82px;border-radius:18px;overflow:hidden;background:radial-gradient(circle at top,#facc15,#f97316,#111827);flex-shrink:0;display:flex;align-items:center;justify-content:center;}
+    .team-avatar{width:100%;height:100%;object-fit:cover;display:none;}
+    .team-avatar-placeholder{font-weight:800;font-size:1.4rem;color:#111827;}
+    .team-main{flex:1;}
+    .team-name{font-size:1.1rem;font-weight:700;text-transform:uppercase;letter-spacing:.06em;margin-bottom:4px;}
+    .team-tagline{font-size:.85rem;color:#9ca3af;margin-bottom:8px;}
+    .team-meta{display:flex;flex-wrap:wrap;gap:6px;font-size:.8rem;}
+    .meta-pill{border-radius:999px;padding:4px 8px;background:#020617;border:1px solid #374151;color:#e5e7eb;}
+    .meta-pill strong{color:#facc15;font-weight:600;}
+    .avatar-upload{margin-top:8px;display:flex;align-items:center;gap:8px;font-size:.8rem;}
+    .avatar-upload input[type="file"]{font-size:.75rem;max-width:160px;}
+    .avatar-small-btn{border-radius:999px;border:none;padding:5px 10px;font-size:.78rem;font-weight:600;background:#0f172a;color:#e5e7eb;cursor:pointer;}
+    .avatar-small-btn:hover{background:#111827;}
+    .members-list{margin-top:10px;border-top:1px solid #1f2937;padding-top:10px;}
+    .members-title{font-size:.86rem;text-transform:uppercase;letter-spacing:.16rem;color:#9ca3af;margin-bottom:6px;}
+    .stats-grid{display:grid;grid-template-columns:repeat(3,minmax(0,1fr));gap:10px;margin:8px 0 10px;font-size:.85rem;}
+    .stat-card{border-radius:12px;padding:9px 10px;background:radial-gradient(circle at top,#0b1120 0,#020617 70%);border:1px solid #1f2937;}
+    .stat-label{color:#9ca3af;margin-bottom:4px;font-size:.78rem;}
+    .stat-value{font-size:1.05rem;font-weight:700;}
+    .stat-unit{font-size:.8rem;color:#9ca3af;margin-left:3px;}
+    #cabinetMsg{margin-top:8px;font-size:.82rem;}
     #cabinetMsg.ok{color:#22c55e;}
     #cabinetMsg.err{color:#ef4444;}
   </style>
 </head>
+
 <body class="cabinet-page">
 
 <header class="header">
   <div class="container header__row">
-    <a class="logo" href="index.html">
-      <span class="logo__mark">SC</span>
-      <span class="logo__text">STOLAR CARP</span>
-    </a>
-    <nav class="nav" id="nav">
+    <a class="logo" href="index.html"><span class="logo__mark">SC</span><span class="logo__text">STOLAR CARP</span></a>
+    <nav class="nav">
       <a href="index.html" class="nav__link">Головна</a>
       <a href="rules.html" class="nav__link">Регламент</a>
       <a href="register.html" class="nav__link">Реєстрація</a>
@@ -305,141 +74,96 @@
 </header>
 
 <main class="main">
-  <section class="container">
-    <div class="cabinet-hero">
-      <div class="cabinet-kicker">
-        <span class="cabinet-kicker-dot"></span>
-        STOLAR CARP · CABINET
+<section class="container">
+
+<div class="cabinet-hero">
+  <div class="cabinet-kicker"><span class="cabinet-kicker-dot"></span>STOLAR CARP · CABINET</div>
+  <h1 class="cabinet-title"><span>МІЙ КАБІНЕТ</span></h1>
+  <p class="cabinet-subtitle" id="cabinetStatus">Перевірка доступу до кабінету…</p>
+</div>
+
+<div class="cabinet-layout" id="cabinetContent" style="display:none;">
+
+<div class="card card--soft">
+<h2 class="card-title">Команда та профіль</h2>
+<p class="card-subtitle">Ваш акаунт, команда та базові дані.</p>
+
+<div class="team-header">
+  <div class="team-avatar-wrap">
+    <img id="cabinetAvatarImg" class="team-avatar">
+    <div id="cabinetAvatarPlaceholder" class="team-avatar-placeholder">SC</div>
+  </div>
+
+  <div class="team-main">
+    <div class="team-name" id="teamNameText">Команда…</div>
+    <div class="team-tagline" id="captainText">Капітан…</div>
+
+    <div class="team-meta">
+      <div class="meta-pill"><strong>Роль:</strong> <span id="userRoleText">–</span></div>
+      <div class="meta-pill"><strong>Телефон:</strong> <span id="userPhoneText">–</span></div>
+      <div class="meta-pill" id="joinCodePill" style="display:none;">
+        <strong>Код команди:</strong> <span id="joinCodeText"></span>
       </div>
-      <h1 class="cabinet-title">
-        <span>МІЙ КАБІНЕТ</span>
-      </h1>
-      <p class="cabinet-subtitle" id="cabinetStatus">
-        Перевірка доступу до кабінету…
-      </p>
     </div>
 
-    <!-- Весь контент зʼявиться тільки після завантаження даних -->
-    <div class="cabinet-layout" id="cabinetContent" style="display:none;">
-
-      <!-- ПРОФІЛЬ КОМАНДИ -->
-      <div class="card card--soft">
-        <h2 class="card-title">Команда та профіль</h2>
-        <p class="card-subtitle">
-          Ваш акаунт, команда та базові дані.
-        </p>
-
-        <div class="team-header">
-          <div class="team-avatar-wrap">
-            <img id="cabinetAvatarImg" class="team-avatar" alt="Аватар">
-            <div id="cabinetAvatarPlaceholder" class="team-avatar-placeholder">SC</div>
-          </div>
-
-          <div class="team-main">
-            <div class="team-name" id="teamNameText">Команда…</div>
-            <div class="team-tagline" id="captainText">Капітан…</div>
-
-            <div class="team-meta">
-              <div class="meta-pill">
-                <strong>Роль:</strong> <span id="userRoleText">–</span>
-              </div>
-              <div class="meta-pill">
-                <strong>Телефон:</strong> <span id="userPhoneText">–</span>
-              </div>
-              <div class="meta-pill" id="joinCodePill" style="display:none;">
-                <strong>Код команди:</strong> <span id="joinCodeText"></span>
-              </div>
-            </div>
-
-            <div class="avatar-upload">
-              <label for="avatarFile">Аватар учасника:</label>
-              <input type="file" id="avatarFile" accept="image/*">
-              <button id="avatarUploadBtn" class="avatar-small-btn">Зберегти</button>
-            </div>
-
-            <div id="cabinetMsg"></div>
-          </div>
-        </div>
-
-        <div class="members-list">
-          <div class="members-title">Склад команди</div>
-          <div id="membersContainer">
-            <div class="cabinet-small-muted">Завантаження списку учасників…</div>
-          </div>
-        </div>
-      </div>
-
-      <!-- МОЯ УЧАСТЬ -->
-      <div class="card">
-        <h2 class="card-title">Моя участь</h2>
-
-        <div id="myCompetitions">
-          <div class="cabinet-small-muted">Завантаження участі…</div>
-        </div>
-      </div>
-
-      <!-- ДОСЯГНЕННЯ -->
-      <div class="card">
-        <h2 class="card-title">Досягнення команди</h2>
-        <p class="card-subtitle">
-          Підсумки виступів у сезоні STOLAR CARP 
-        </p>
-
-        <div class="stats-grid">
-          <div class="stat-card">
-            <div class="stat-label">Загальний улов за сезон</div>
-            <div class="stat-value">
-              <span id="statTotalWeight">—</span><span class="stat-unit">кг</span>
-            </div>
-          </div>
-          <div class="stat-card">
-            <div class="stat-label">Найбільша риба (Big Fish)</div>
-            <div class="stat-value">
-              <span id="statBigFish">—</span><span class="stat-unit">кг</span>
-            </div>
-          </div>
-          <div class="stat-card">
-            <div class="stat-label">Місце в сезонному рейтингу</div>
-            <div class="stat-value">
-              <span id="statRank">—</span>
-            </div>
-          </div>
-        </div>
-
-        <p class="cabinet-small-muted">
-          Детальна таблиця.
-        </p>
-      </div>
-
+    <div class="avatar-upload">
+      <label for="avatarFile">Аватар учасника:</label>
+      <input type="file" id="avatarFile" accept="image/*">
+      <button id="avatarUploadBtn" class="avatar-small-btn">Зберегти</button>
     </div>
-  </section>
+
+    <!-- ✅ FIX -->
+    <div id="avatarMsg" class="cabinet-small-muted"></div>
+
+    <div id="cabinetMsg"></div>
+  </div>
+</div>
+
+<div class="members-list">
+  <div class="members-title">Склад команди</div>
+  <div id="membersContainer">
+    <div class="cabinet-small-muted">Завантаження списку учасників…</div>
+  </div>
+</div>
+</div>
+
+<!-- МОЯ УЧАСТЬ -->
+<div class="card">
+<h2 class="card-title">Моя участь</h2>
+<div id="myCompetitions">
+  <div class="cabinet-small-muted">Завантаження участі…</div>
+</div>
+</div>
+
+<!-- ДОСЯГНЕННЯ -->
+<div class="card">
+<h2 class="card-title">Досягнення команди</h2>
+<p class="card-subtitle">Підсумки виступів у сезоні STOLAR CARP</p>
+
+<div class="stats-grid">
+  <div class="stat-card"><div class="stat-label">Загальний улов</div><div class="stat-value"><span id="statTotalWeight">—</span><span class="stat-unit">кг</span></div></div>
+  <div class="stat-card"><div class="stat-label">Big Fish</div><div class="stat-value"><span id="statBigFish">—</span><span class="stat-unit">кг</span></div></div>
+  <div class="stat-card"><div class="stat-label">Місце</div><div class="stat-value"><span id="statRank">—</span></div></div>
+</div>
+</div>
+
+</div>
+</section>
 </main>
 
 <footer class="footer">
-  <div class="container footer__row">
-    <div>© 2025 STOLAR CARP · Львів</div>
-    <div class="footer__links">
-      <a href="https://invite.viber.com/?g=8R04gUEhdVSnX6sr_DxGGGqAXTus0Ygh">Viber</a>
-      <a href="https://youtube.com/@dk-stolarcarp?si=H-BUK2msCiKXdcA9">YouTube</a>
-    </div>
-  </div>
+<div class="container footer__row">
+  <div>© 2025 STOLAR CARP · Львів</div>
+</div>
 </footer>
 
-<!-- SP 1: Firebase compat CDN -->
 <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-auth-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-storage-compat.js"></script>
 
-<!-- SP 2: ЄДИНА ініціалізація -->
 <script src="assets/js/firebase-init.js"></script>
-
-<!-- SP 3: Кабінет -->
 <script src="assets/js/cabinet.js"></script>
-
-<!-- ✅ my_participation.js прибрано, щоб не було конфлікту з cabinet.js -->
-
-<!-- SP 4: Досягнення команди -->
 <script src="assets/js/cabinet_achievements.js"></script>
 
 </body>
